--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="row main">
 		<div class="column bubble">
-			<span class="name">Woof Bark</span>
+			<span class="name">Retnuh Cira</span>
 			<span class="desc">The programmer you need</span>
 			<span class="desc">with mad skills indeed</span>
 			<span class="buton">My Resume</span>
