--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="row main">
 		<div class="column bubble">
-			<span class="name">Retnuh Cira</span>
+			<span class="name">Aric Hunter</span>
 			<span class="desc">The programmer you need</span>
 			<span class="desc">with mad skills indeed</span>
 			<span class="buton">My Resume</span>
@@ -39,6 +39,46 @@
 					<td><i class="fa fa-check"></i></td>
 				</tr>
 			</table>
+		</div>
+		<br>
+		<br>
+		<br>
+	</div>
+	<div class="testimonials">
+		<br>
+		<br>
+		<div class="row">
+			<span class="tt">Testimonials</span>
+		</div>
+		<div class="row">
+			<div class="trow">
+				<span class="tname">My Friend Judith</span>
+				<img class="timage" width="100px" height="100px" src="judith.png">
+		</div>
+		</div>
+		<div class="row">
+			<div class="trow">
+				<span class="tname">My Mother</span>
+				<img class="timage" width="100px" height="100px" src="https://i.pinimg.com/originals/de/fb/c2/defbc28529f70fffe16b1a219954612c.png">
+			</div>
+		</div>
+	</div>
+	<div class="skillz">
+		<br>
+		<br>
+		<div class="row">
+			<span class="skillzt">Other Skills</span>
+		</div>
+		<br>
+		<br>
+		<div class="row">
+			<img width="200px" height="200px" src="https://cdn.iconscout.com/icon/premium/png-256-thumb/juggler-1429388-1209939.png">
+			<ul>
+				<li>Hi</li>
+				<li>Hello</li>
+				<li>ola</li>
+				<li>Konichiwa</li>
+			</ul>
 		</div>
 	</div>
 </body>
